--- a/front-end/front.html
+++ b/front-end/front.html
@@ -84,7 +84,7 @@
       <div class="footer-col">
         <h4>Support</h4>
         <ul>
-          <li><a href="helpcentr.html">Help Center</a></li>
+          <li><a href="helpcentre.html">Help Center</a></li>
           <li><a href="faq.html">FAQs</a></li>
           <li><a href="branches.html">Branch Locator</a></li> 
         </ul>
