--- a/front-end/account.html
+++ b/front-end/account.html
@@ -31,7 +31,7 @@
   <!-- Main Form -->
   <main class="container">
     <h2>Account Management</h2>
-    <form action="backend/add_account.php" method="POST">
+    <form action="back-end/add_account.php" method="POST">
       <label>Customer ID:</label>
       <input type="number" name="customer_id" min="1" required placeholder="Enter customer ID">
 
