--- a/front-end/transaction.html
+++ b/front-end/transaction.html
@@ -30,7 +30,7 @@
   <!-- Main content -->
   <main class="container">
     <h2>Transactions</h2>
-    <form action="backend/add_transaction.php" method="POST">
+    <form action="back-end/add_transaction.php" method="POST">
       <label>Account ID:</label>
       <input type="number" min="1" name="account_id" required>
 
