--- a/front-end/register.html
+++ b/front-end/register.html
@@ -30,7 +30,7 @@
   <!-- Main Form -->
   <main class="container">
     <h2>Open Account</h2>
-    <form action="back-end/add_customer.php" method="POST">
+    <form action="../back-end/add_customer.php" method="POST">
       <label>Full Name:</label>
       <input type="text" name="name" required>
 
