--- a/frontend/branches.html
+++ b/frontend/branches.html
@@ -1,17 +1,207 @@
-<main class="container">
-  <title>Branches</title>
-  <h2>Branches</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>Branch ID</th>
-        <th>Name</th>
-        <th>Address</th>
-        <th>IFSC Code</th>
-      </tr>
-    </thead>
-    <tbody>
-      <!-- Dynamic data from backend -->
-    </tbody>
-  </table>
-</main>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Branches - ARISE Bank</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <style>
+    /* ===== Base Styles ===== */
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #f9f9f9;
+      line-height: 1.6;
+      color: #333;
+    }
+
+    /* ===== Header & Navigation ===== */
+    .site-header {
+      background: #003366;
+      color: #fff;
+      padding: 1rem 0;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    .header-inner {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 90%;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .logo a {
+      font-size: 2rem;
+      font-weight: 600;
+      text-decoration: none;
+      color: #fff;
+    }
+    .site-nav ul {
+      list-style: none;
+      display: flex;
+      gap: 1.5rem;
+    }
+    .site-nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.3s ease;
+    }
+    .site-nav a:hover,
+    .site-nav a.active {
+      color: #ffcc00;
+    }
+
+    /* ===== Main Container ===== */
+    main.container {
+      padding: 4rem 0;
+      width: 90%;
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    /* Branch Table Styling */
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background: #fff;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    th, td {
+      padding: 12px 15px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+    }
+    th {
+      background: #003366;
+      color: #fff;
+      font-weight: 600;
+    }
+    tr:hover {
+      background-color: #f1f1f1;
+    }
+
+    /* Content Card */
+    .content-card {
+      background: #fff;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      margin-bottom: 2rem;
+    }
+    .content-card h2 {
+      font-size: 28px;
+      color: #003366;
+      font-weight: 700;
+      margin-bottom: 1rem;
+      border-bottom: 2px solid #ffcc00;
+      display: inline-block;
+      padding-bottom: 6px;
+    }
+
+    /* ===== Footer ===== */
+    .site-footer {
+      background: #003366;
+      color: #fff;
+      margin-top: 3rem;
+      padding: 3rem 0;
+      text-align: center;
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .site-nav ul {
+        flex-direction: column;
+        gap: 1rem;
+      }
+      table, th, td {
+        font-size: 14px;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Header -->
+  <header class="site-header">
+    <div class="header-inner">
+      <div class="logo"><a href="front.html">ARISE</a></div>
+      <nav class="site-nav">
+        <ul>
+          <li><a href="front.html">Home</a></li>
+          <li><a href="account.html">Accounts</a></li>
+          <li><a href="transaction.html">Transactions</a></li>
+          <li><a href="loans.html">Loans</a></li>
+          <li><a href="branches.html" class="active">Branches</a></li>
+          <li><a href="about.html">About Us</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Branches Section -->
+  <main class="container">
+    <section class="content-card">
+      <h2>Our Branches</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Branch ID</th>
+            <th>Name</th>
+            <th>Address</th>
+            <th>IFSC Code</th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Dynamic data from backend -->
+        </tbody>
+      </table>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer class="site-footer">
+    <p>© 2025 ARISE. All rights reserved.</p>
+  </footer>
+
+  <!-- JS to fetch branches -->
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const tbody = document.querySelector("table tbody");
+
+      fetch("/branches")
+        .then(res => res.json())
+        .then(branches => {
+          if (branches.length === 0) {
+            tbody.innerHTML = "<tr><td colspan='4'>No branches found</td></tr>";
+            return;
+          }
+
+          branches.forEach(branch => {
+            const tr = document.createElement("tr");
+            tr.innerHTML = `
+              <td>${branch.branch_id}</td>
+              <td>${branch.branch_name}</td>
+              <td>${branch.address}</td>
+              <td>${branch.ifsc_code}</td>
+            `;
+            tbody.appendChild(tr);
+          });
+        })
+        .catch(err => {
+          console.error("Error fetching branches:", err);
+          tbody.innerHTML = "<tr><td colspan='4'>Failed to load branches</td></tr>";
+        });
+    });
+  </script>
+
+</body>
+</html>
